# snake

./: .gitignore  Makefile.am  README.md  _0_prepare-apt.sh  _1_create_configure.sh  _2_build  _2_build_and_install-debug.sh  _clean  _clean.sh  configure.ac
src/: Makefile.am  Z_mem.h  __hack.h  _text.c  _text.h  _time.c  _time.h  chart.c  chart.h  eng_curses.h  ents_chart.c  ents_chart.h  ents_ctrl.c  ents_ctrl.h  ents_objects.c  ents_objects.h  ents_payer_death.c  ents_payer_death.h  fakefunc.c  fakefunc.h  g_ctl.c  g_ctl.h  g_ctl_lib.h  g_defs.h  g_eng.c  g_eng.h  g_eng_exports.h  g_events.c  g_events.h  g_types.h  g_utils.c  g_utils.h  game.c  game.h  gamelib_chart.c  gamelib_chart.h  gamelib_common.h  gamelib_ctrl.c  gamelib_ctrl.h  gamelib_main.c  (+33 more)
tools/: iconvr.sh
