MAINTAINERCLEANFILES = Makefile.in

ACLOCAL_AMFLAGS = -I m4

bin_PROGRAMS = snake

snake_CFLAGS = -std=c11 -Wall -D_DEFAULT_SOURCE
snake_LDFLAGS = -lncursesw

snake_SOURCES = \
sys_utils.c \
sys_time.c \
_text.c \
io.c \
g_utils.c \
g_events.c \
g_ctl.c \
game.c \
models.c \
render.c \
world_main.c \
ents_chart.c \
ents_ctrl.c \
ents_objects.c \
ents_payer_death.c \
menu.c \
main.c
