MAINTAINERCLEANFILES = Makefile.in

ACLOCAL_AMFLAGS = -I m4

bin_PROGRAMS = snake

snake_CFLAGS = -std=c11 -Wall -D_DEFAULT_SOURCE
snake_LDFLAGS = -lncursesw

snake_SOURCES = \
sys_utils.c \
sys_time.c \
_text.c \
io.c \
g_utils.c \
g_events.c \
g_ctl.c \
game.c \
models.c \
hud.c \
render.c \
world_main.c \
menu.c \
gamelib_chart.c \
gamelib_ctrl.c \
gamelib_objects.c \
gamelib_payer_death.c \
main.c
