MAINTAINERCLEANFILES = Makefile.in

ACLOCAL_AMFLAGS = -I m4

bin_PROGRAMS = snake

snake_CFLAGS = -std=c11 -Wall -D_DEFAULT_SOURCE
snake_LDFLAGS = -lncursesw

snake_SOURCES = \
gamelib_chart.c \
gamelib_ctrl.c \
gamelib_menu.c \
gamelib_objects.c \
gamelib_payer_death.c \
sys_time.c \
sys_utils.c \
io.c \
game.c \
g_ctl.c \
g_events.c \
g_utils.c \
hud.c \
models.c \
render.c \
world_main.c \
main.c

